Fix simulator class

--- a/notebooks/preprocess_examples/example_simulator.ipynb
+++ b/notebooks/preprocess_examples/example_simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "09324e10",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1461a700",
    "metadata": {},
    "outputs": [
@@ -60,15 +60,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-27 20:06:37\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out23.noisy.T.cal_sim_temp (Tf Jones):\n",
-      "2025-08-27 20:06:37\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
-      "2025-08-27 20:06:37\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n",
-      "2025-08-27 20:06:38\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out21.noisy.T.cal_sim_temp (Tf Jones):\n",
-      "2025-08-27 20:06:38\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
-      "2025-08-27 20:06:38\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n",
-      "2025-08-27 20:06:39\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out20.noisy.T.cal_sim_temp (Tf Jones):\n",
-      "2025-08-27 20:06:39\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
-      "2025-08-27 20:06:39\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n"
+      "2025-08-28 18:28:33\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out23.noisy.T.cal_sim_temp (Tf Jones):\n",
+      "2025-08-28 18:28:33\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
+      "2025-08-28 18:28:33\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n",
+      "2025-08-28 18:28:34\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out21.noisy.T.cal_sim_temp (Tf Jones):\n",
+      "2025-08-28 18:28:34\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
+      "2025-08-28 18:28:34\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n",
+      "2025-08-28 18:28:35\tWARN\tnoise::CTPatchedInterp::interpolate\tIn caltable groundtruth.alma.out20.noisy.T.cal_sim_temp (Tf Jones):\n",
+      "2025-08-28 18:28:35\tWARN\tnoise::CTPatchedInterp::interpolate+\t Insufficient solution channel sampling (nchan=1) for frequency-dependent LINEAR interpolation \n",
+      "2025-08-28 18:28:35\tWARN\tnoise::CTPatchedInterp::interpolate+\t of calibration for MS spw=0; using NEAREST instead.\n"
      ]
     },
     {
@@ -113,16 +113,15 @@
     "for sim_number, simoberve_config in enumerate(simobserve_configs):\n",
     "    simulator = Simulator(\n",
     "        image = fits_file,\n",
-    "        simobserve_config=simoberve_config,\n",
     "        output_folder = output_folder / f\"sim{sim_number+1}\",\n",
     "        output_name = f\"visibilities\",\n",
     "    )\n",
-    "    simulator.simulate()"
+    "    simulator.simobserve_simulate(simobserve_config=simoberve_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5eb8050f",
    "metadata": {},
    "outputs": [
@@ -130,7 +129,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-27 20:06:58\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
+      "2025-08-28 18:28:36\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
      ]
     },
     {
@@ -147,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-27 20:06:58\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
+      "2025-08-28 18:28:36\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
      ]
     },
     {
@@ -164,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-27 20:06:58\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
+      "2025-08-28 18:28:36\tWARN\ttask_tclean::SIImageStore::restore (file /Users/casaci/bamboohome/xml-data/build-dir/CASASPECS-RELEASE670BUILDCASALITH0-BPOSX14ARMPY310/casa6/casatools/src/code/synthesis/ImagerObjects/SIImageStore.cc, line 2298)\tRestoring with an empty model image. Only residuals will be processed to form the output restored image.\n"
      ]
     },
     {
